--- a/view/layout.html
+++ b/view/layout.html
@@ -32,7 +32,7 @@
         );
       })();
     </script>
-    <title>快速网站成型工具 - React-Component-Library</title>
+    <title>Layout 快速布局 - React-Component-Library</title>
   </head>
   <body>
     <div id="root"></div>
