--- a/lx-React-View-UI-code/src/Select/index.module.less
+++ b/lx-React-View-UI-code/src/Select/index.module.less
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     width: 80px;
-    height: 0px;
+    height: 0;
     overflow: hidden;
     box-shadow: 0 3px 10px #8c8c8c;
     transition: 0.1s linear;
@@ -69,7 +69,7 @@
   display: flex;
   flex-direction: column;
   width: 80px;
-  height: 0px;
+  height: 0;
   overflow: hidden;
   box-shadow: 0 3px 10px #8c8c8c;
   transition: 0.1s linear;
